--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ body {
   padding: 0;
 }
 
-img {
+.img {
+  background-image: url('troppo.gif');
+  background-size: cover;
+  background-position: center;
   position: absolute;
-  max-width: 600px;
-  max-height: 600px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
 }
